--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,8 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 #developer genrated folders
-/development/*
+/development/
 /includes/visitor.php
 /private/
+/db/
 
