Final Final major fixes

--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,9 @@ fabric.properties
 
 #developer genrated folders
 /development/
+/development/dummy_data_creator.py
 /includes/visitor.php
 /private/
 /db/
+
 
